--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/avataaars.svg" alt="">
+      <img class="masthead-avatar mb-5" src="img/IMG_0971.jpg" alt="">
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Michael Taylor</h1>
@@ -187,18 +187,18 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+          <p class="lead">Michael is an undergraduate student at the University of Connecticut working towards completing his Bachelor of Science in Engineering for Computer Science and Engineering. Michael will be concentrating in Software Development and Design, and is concurrently working to complete his minor in Mathematics.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+          <p class="lead">Michael has a great interest in the application of mathematics underlying within algorithms, electric circuits, and physics. Michael's courseload has helped to solidify his mathematical skills, as he has achieved top marks in his Calculus and Differential Equations courses. He hopes to enhance his education to a dual degree in Applied Mathematics because of the strong correlation between Mathematics and Computer Science & Engineering.</p>
         </div>
       </div>
 
       <!-- About Section Button -->
       <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/">
+        <a class="btn btn-xl btn-outline-light" href="">
           <i class="fas fa-download mr-2"></i>
-          Free Download!
+          Resume
         </a>
       </div>
 
@@ -274,8 +274,8 @@
         <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
-          <p class="lead mb-0">2215 John Daniel Drive
-            <br>Clark, MO 65243</p>
+          <p class="lead mb-0">University of Connecticut
+            <br>Storrs, CT 06269</p>
         </div>
 
         <!-- Footer Social Icons -->
@@ -297,9 +297,8 @@
 
         <!-- Footer About Text -->
         <div class="col-lg-4">
-          <h4 class="text-uppercase mb-4">About Freelancer</h4>
-          <p class="lead mb-0">Freelance is a free to use, MIT licensed Bootstrap theme created by
-            <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+          <h4 class="text-uppercase mb-4">About UConn SoE</h4>
+          <p class="lead mb-0"> <a href="https://www.engr.uconn.edu/about/at-a-glance/">UConn School of Engineering</a> <br> is a powerhouse for research and engineering education in the state of Connecticut and beyond.</p>
         </div>
 
       </div>
@@ -309,7 +308,7 @@
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>Copyright &copy; Your Website 2019</small>
+      <small>Copyright &copy; Michael Taylor 2019</small>
     </div>
   </section>
 
@@ -336,7 +335,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Log Cabin</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Laser Transmitter & Reciever</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
