--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fab fa-python"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -82,7 +82,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-database"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -179,7 +179,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-laptop-code"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -216,7 +216,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-envelope-open-text"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -291,7 +291,7 @@
             <i class="fab fa-fw fa-linkedin-in"></i>
           </a>
           <a class="btn btn-outline-light btn-social mx-1" href="#">
-            <i class="fab fa-fw fa-dribbble"></i>
+            <i class="fab fa-fw fa-github"></i>
           </a>
         </div>
 
