--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
         <!-- Footer About Text -->
         <div class="col-lg-4">
-          <h4 class="text-uppercase mb-4">About UConn SoE</h4>
+          <h4 class="text-uppercase mb-4">About UConn S.o.E.</h4>
           <p class="lead mb-0"> <a href="https://www.engr.uconn.edu/about/at-a-glance/">UConn School of Engineering</a> <br> is a powerhouse for research and engineering education in the state of Connecticut and beyond.</p>
         </div>
 
