--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">University of Connecticut</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Education</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -347,7 +347,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/engineering.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong>Bachelor of Science in Engineering; <i>Computer Science and Engineering</i></strong> <br><i>Relevant Coursework: </i>Data Structures and Object Oriented Programming, Introduction to Discrete Mathematics, Digital Logic Design, Electric Circuits, Multivariable Calculus, Elementary Differential Equations</p>
+                <p class="mb-5"><strong>University of Connecticut</strong><br><strong>Bachelor of Science in Engineering; <i>Computer Science and Engineering</i></strong> <br><i>Relevant Coursework: </i>Data Structures and Object Oriented Programming, Introduction to Discrete Mathematics, Digital Logic Design, Electric Circuits, Multivariable Calculus, Elementary Differential Equations</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
