--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Programmer - Engineer - Mathematician</p>
+      <p class="masthead-subheading font-weight-light mb-0">Programmer - Engineer - Logician</p>
 
     </div>
   </header>
@@ -190,7 +190,7 @@
           <p class="lead">Michael is an undergraduate student at the University of Connecticut working towards completing his Bachelor of Science in Engineering for Computer Science and Engineering. Michael will be concentrating in Software Development and Design, and is concurrently working to complete his minor in Mathematics.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Michael has a great interest in the application of mathematics underlying within algorithms, electric circuits, and physics. Michael's courseload has helped to solidify his mathematical skills, as he has achieved top marks in his Calculus and Differential Equations courses. He hopes to enhance his education to a dual degree in Applied Mathematics because of the strong correlation between Mathematics and Computer Science & Engineering.</p>
+          <p class="lead">Michael has a great interest in the application of mathematics underlying within algorithms, electric circuits, and physics. Michael's courseload has helped to solidify his mathematical skills, as he has recently achieved top marks in his Calculus and Differential Equations courses.</p>
         </div>
       </div>
 
@@ -198,7 +198,7 @@
       <div class="text-center mt-4">
         <a class="btn btn-xl btn-outline-light" href="">
           <i class="fas fa-download mr-2"></i>
-          Resume
+          Request a Resume
         </a>
       </div>
 
@@ -297,8 +297,10 @@
 
         <!-- Footer About Text -->
         <div class="col-lg-4">
-          <h4 class="text-uppercase mb-4">About UConn S.o.E.</h4>
-          <p class="lead mb-0"> <a href="https://www.engr.uconn.edu/about/at-a-glance/">UConn School of Engineering</a> <br> is a powerhouse for research and engineering education in the state of Connecticut and beyond.</p>
+          <h4 class="text-uppercase mb-4">Strategic Partners</h4>
+          <p class="lead mb-0"><font size="3"><i>Partners listed below are peers of Michael who have demostrated strong coding, teamwork and leadership skills in partnered projects.</i>
+          <br><a href="https://www.linkedin.com/in/brandon-mino/">Brandon Mino - VP of UConn ACM</a></li>
+          <br><a href="https://www.linkedin.com/in/zacharyzambuto/">Zachary Zambuto - Mobile App Developer</a></font></p>
         </div>
 
       </div>
@@ -347,7 +349,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/engineering.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong>University of Connecticut</strong><br><strong>Bachelor of Science in Engineering; <i>Computer Science and Engineering</i></strong> <br><i>Relevant Coursework: </i>Data Structures and Object Oriented Programming, Introduction to Discrete Mathematics, Digital Logic Design, Electric Circuits, Multivariable Calculus, Elementary Differential Equations</p>
+                <p class="mb-5"><strong>University of Connecticut; <i>School of Engineering</i><br>Bachelor of Science in Engineering; <i>Computer Science and Engineering</i><br>Mathematics Minor</strong> <br><i>Relevant Coursework: </i>Data Structures and Object Oriented Programming, Introduction to Discrete Mathematics, Digital Logic Design, Electric Circuits, Multivariable Calculus, Elementary Differential Equations</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -374,7 +376,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">UConn Information Technology Services</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Work Experience</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -386,7 +388,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/its.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong><i>Specialist Shop Technician</i></strong> <br> Troubleshoot and resolve hardware, software, and networking issues by working directly with university students and faculty and providing them with prompt and effective solutions.</p>
+                <p class="mb-5"><strong>UConn Information Technology Services; <i>Specialist Shop Technician</i></strong> <br> Troubleshoot and resolve hardware, software, and networking issues by working directly with university students and faculty and providing them with prompt and effective solutions.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -413,7 +415,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Upsilon Pi Epsilon</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Honors and Awards</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -425,7 +427,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/upe.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Upsilon Pi Epsilon promotes the computing and information disciplines and encourages their contribution to the enhancement of knowledge.</p>
+                <p class="mb-5"><strong>Upsilon Pi Epsilon; <i>Honors Computing Fraternity</i></strong><br>Upsilon Pi Epsilon promotes the computing and information disciplines and encourages their contribution to the enhancement of knowledge.<br><br><strong>Deans List Engineering</strong><br>Rank within the upper 25th percentile in the School of Engineering.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -452,7 +454,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Assiciation for Computing Machinery</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Involvement</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -464,7 +466,14 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/acm.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong><i>Deep Learning Project Member</i></strong> <br>The ACM chapter at the University of Connecticut provides a voice for student concerns about computer-related issues and a venue for educational enrichment.</p>
+                <p class="mb-5"><strong>UConn Association for Computing Machinery; <i>Deep Learning Project Member</i></strong> 
+                  <br>The ACM chapter at the University of Connecticut provides a voice for student concerns about computer-related 
+                  issues and a venue for educational enrichment.
+                  <br><br>
+                  <strong>UConn Engineering Ambassadors; <i>Member</i></strong>
+                  <br>Engineering Ambassadors engage a diverse student population, our university and the greater community in activities 
+                  that inspire them to explore a variety of creative solutions to the problems facing humanity.
+                </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -491,7 +500,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">UConn Innovation House</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Leadership</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -503,7 +512,9 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/ih.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong><i>Floor Mentor</i></strong><br>Innovation House enables students to access, and leverage campus resources and networks during their personal exploration of creativity, innovation, and entrepreneurship.</p>
+                <p class="mb-5"><strong>UConn Innovation House; <i>Floor Mentor</i></strong>
+                  <br>Work and collaborate with fellow leaders and residents in order to stimulate 
+                  community bonding by planning events for a floor of over 80 residents.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -530,7 +541,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Hack UConn</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Projects</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -542,7 +553,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/hu.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong><i>Software Developer</i></strong><br>Developed an Augmented Reality(AR) product to benefit the hearing impaired. The product delivers accessible speech-to-text translation through the implementation of facial recognition to reduce the need for other assistance by displaying subtitles on an AR platform.</p>
+                <p class="mb-5"><strong>Hack UConn 2019; <i>Software Developer</i></strong><br>Developed an Augmented Reality (AR) product to benefit the hearing impaired. The product delivers accessible speech-to-text translation through the implementation of facial recognition to reduce the need for other assistance by displaying subtitles on an AR platform.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
