--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           <h4 class="text-uppercase mb-4">Strategic Partners</h4>
           <p class="lead mb-0"><font size="3"><i>Partners listed below are peers of Michael who have demostrated strong coding, teamwork and leadership skills in partnered projects.</i>
           <br><a href="https://www.linkedin.com/in/brandon-mino/">Brandon Mino - VP of UConn ACM</a></li>
-          <br><a href="https://www.linkedin.com/in/zacharyzambuto/">Zachary Zambuto - Mobile App Developer</a></font></p>
+          <br><a href="https://www.linkedin.com/in/zacharyzambuto/">Zachary Zambuto - Full Stack Developer</a></font></p>
         </div>
 
       </div>
@@ -353,7 +353,11 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/engineering.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong>University of Connecticut; <i>School of Engineering</i><br>Bachelor of Science in Engineering; <i>Computer Science and Engineering</i><br>Mathematics Minor</strong> <br><i>Relevant Coursework: </i>Data Structures and Object Oriented Programming, Introduction to Discrete Mathematics, Digital Logic Design, Electric Circuits, Multivariable Calculus, Elementary Differential Equations</p>
+                <p class="mb-5"><strong>University of Connecticut; <i>School of Engineering</i>
+                  <br>Bachelor of Science in Engineering; <i>Computer Science and Engineering</i>
+                  <br>Mathematics Minor</strong> 
+                  <br><i>Relevant Coursework: </i>Data Structures and Object Oriented Programming, Introduction to Discrete Systems, 
+                  Digital Logic Design, Electric Circuits, Multivariable Calculus, Elementary Differential Equations</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -392,7 +396,12 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/its.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong>UConn Information Technology Services; <i>Specialist Shop Technician</i></strong> <br> Troubleshoot and resolve hardware, software, and networking issues by working directly with university students and faculty and providing them with prompt and effective solutions.</p>
+                <p class="mb-5"><strong>UConn Information Technology Services; <i>Specialist Shop Technician, Knowledge Base Team Member</i></strong> 
+                  <br>- Troubleshoot and resolve hardware, software, and networking issues by working directly with university students and faculty 
+                  and providing them with prompt and effective solutions.
+                  <br>- Create strategic plan with knowledge base team members to successfully migrate over 1,000 knowledge base
+                  articles onto new web client.
+                </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -471,12 +480,17 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/acm.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5"><strong>UConn Association for Computing Machinery; <i>Deep Learning Project Member</i></strong> 
-                  <br>The ACM chapter at the University of Connecticut provides a voice for student concerns about computer-related 
+                  <br>- The ACM chapter at the University of Connecticut provides a voice for student concerns about computer-related 
                   issues and a venue for educational enrichment.
+                  <br>- Collaborate with fellow team members in designing a poker-bot capable of playing amongst multiple
+                  opponents while incorporating machine learning properties (Python).
                   <br><br>
                   <strong>UConn Engineering Ambassadors; <i>Member</i></strong>
                   <br>Engineering Ambassadors engage a diverse student population, our university and the greater community in activities 
                   that inspire them to explore a variety of creative solutions to the problems facing humanity.
+                  <br><br>
+                  <strong>Volunteer Service</strong>
+                  <br>UConn STEM Night, Northeast Science Bowl, UConn Open House - Engineering
                 </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
@@ -517,8 +531,11 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/ih.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5"><strong>UConn Innovation House; <i>Floor Mentor</i></strong>
-                  <br>Work and collaborate with fellow leaders and residents in order to stimulate 
-                  community bonding by planning events for a floor of over 80 residents.</p>
+                  <br>- Work and collaborate with fellow leaders and residents in order to stimulate 
+                  community bonding by planning events for a floor of over 80 residents.
+                  <br>- Established a strategic business solution targeting technology education in partnership with UConn’s
+                  Innovation initiative.
+                </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -557,7 +574,16 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/hu.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong>Hack UConn 2019; <i>Software Developer</i></strong><br>Developed an Augmented Reality (AR) product to benefit the hearing impaired. The product delivers accessible speech-to-text translation through the implementation of facial recognition to reduce the need for other assistance by displaying subtitles on an AR platform.</p>
+                <p class="mb-5">
+                  <strong>Hack UConn 2019; <i>Team Insight - Software Developer</i></strong>
+                  <br>Developed an augmented reality product to benefit the hearing impaired by delivering accessible speech-to-
+                  text translation through the implementation of facial recognition (Python).
+                  <br><br>
+                  <strong><a style="color:black" href="https://youtu.be/hO8qs4QV55k">Laser Transmitter and Receiver Unit</a></strong>
+                  <br>Electric Circuit utilizing operational amplifiers, RLC circuits, and a laser with the goal of transmitting 
+                  audio signals with little to no background noise/static. Laser can be operated at a variety of distances, 
+                  with adjustable volume control on either end.
+                </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
